# Pocket-borzoi-ICLR

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
jobs/: README.md  (+12 more)
pocketreg-decima-mvp/: Makefile  README.md  pyproject.toml  requirements.txt
pocketreg-decima-mvp/configs/: decima_mvp_100k.yaml  decima_mvp_1m.yaml  decima_mvp_toy.yaml  decima_v2_100k.yaml  decima_v2_toy.yaml
pocketreg-decima-mvp/configs/next_jobs/: context_scaling_obs88_128kb_seed1.yaml  fullgenes_obs88_64kb_v2_seed1.yaml  fullgenes_obs88_64kb_v2_seed2.yaml  fullgenes_obs88_64kb_v2_seed3.yaml
pocketreg-decima-mvp/docs/: decima_environment_and_experiment_runbook.md
pocketreg-decima-mvp/scripts/: benchmark_inference.py  build_decima_manifest.py  build_decima_manifest_v2.py  build_sequence_cache.py  download_decima_data.py  evaluate_baselines_v21.py  evaluate_decima_student.py  export_v2_target_only.py  inspect_decima_data.py  job0_audit.py  run_smoke_test.py  run_smoke_test_v2.py  run_v2_ablation_queue.py  slurm_benchmark.sbatch  slurm_build_sequence_cache.sbatch  slurm_build_v2_manifest.sbatch  slurm_download_decima.sbatch  slurm_download_hg38.sbatch  slurm_evaluate.sbatch  slurm_smoke_test.sbatch  slurm_train100k.sbatch  slurm_train100k_gpu.sbatch  slurm_train_v2_ablation.sbatch  slurm_train_v2_gpu.sbatch  summarize_v2_ablation_results.py  train_decima_student.py  train_decima_student_v2.py  update_next_jobs_summary.py
pocketreg-decima-mvp/tests/: conftest.py  test_fasta.py  test_manifest.py  test_model.py  test_sequence.py  test_splits.py  test_v2.py
(+132 files in other folders)
